welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: not found: value n
n:=0
^RunFour:6: error: not found: value n
	n:=n+1
        ^