welcome.lessons.welcome.variables.RunFour.scala.code
n:=0
while(!estSurBiscuit()) {
	avance();
}
if (estSurBiscuit()) {
	n:=n+1
}
